@@ -141,6 +141,11 @@ class ContentsFeederThread (WorkerThread):
                         xmlConfig = taskParamMap['loadXML']
                     else:
                         xmlConfig = None
+                    # skip files used by another task
+                    if 'skipFilesUsedBy' in taskParamMap:
+                        skipFilesUsedBy = taskParamMap['skipFilesUsedBy']
+                    else:
+                        skipFilesUsedBy = None
                     # check no wait
                     noWaitParent = False
                     parentOutDatasets = set()
@@ -414,7 +419,8 @@ class ContentsFeederThread (WorkerThread):
                                                                                                                               maxFailure,
                                                                                                                               useRealNumEvents,
                                                                                                                               respectLB,
-                                                                                                                              tgtNumEventsPerJob)
+                                                                                                                              tgtNumEventsPerJob,
+                                                                                                                              skipFilesUsedBy)
                                     if retDB == False:
                                         taskSpec.setErrDiag('failed to insert files for {0}. {1}'.format(datasetSpec.datasetName,
                                                                                                          diagMap['errMsg']))
